--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
             <span class="text-sm font-medium ml-4">Калькулятор ИМТ</span>
         </a>
         <a href="?app=wordCounter" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Счетчик слов и символов" data-module="wordCounter">
-            <div class="w-12 h-12 bg-green-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 6h16M4 12h16M4 18h7"></path><path d="M18 15l3 3-3 3"></path><path d="M21 12v6"></path></svg></div>
+            <div class="w-12 h-12 bg-green-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 26.125 26.125" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g><g><path d="M3.499,14.993L0,24.493h2.94l0.425-1.356h3.021l0.398,1.356h3.034l-3.46-9.5H3.499z M4.006,21.101l0.916-2.927h0.027 l0.852,2.927H4.006z"/><path d="M25.982,15.134c-0.092-0.266-0.215-0.495-0.364-0.686c-0.151-0.189-0.326-0.347-0.525-0.472 c-0.198-0.124-0.405-0.221-0.618-0.292c0.354-0.194,0.639-0.435,0.853-0.719c0.212-0.283,0.317-0.665,0.317-1.144 c0-0.238-0.039-0.498-0.119-0.777c-0.08-0.279-0.232-0.539-0.459-0.779c-0.227-0.239-0.537-0.437-0.932-0.592 c-0.395-0.155-0.902-0.233-1.523-0.233H17.41v9.5h5.388c0.418,0,0.825-0.062,1.224-0.187c0.399-0.124,0.756-0.306,1.065-0.546 c0.312-0.239,0.562-0.538,0.751-0.896c0.191-0.361,0.287-0.779,0.287-1.26C26.124,15.707,26.078,15.401,25.982,15.134z M20.337,11.702h1.542c0.303,0,0.543,0.049,0.727,0.147c0.182,0.098,0.271,0.266,0.271,0.505c0,0.31-0.089,0.519-0.266,0.625 c-0.178,0.107-0.422,0.16-0.732,0.16h-1.542V11.702z M23.104,16.226c-0.062,0.115-0.146,0.206-0.252,0.272 c-0.106,0.067-0.229,0.114-0.367,0.14c-0.137,0.026-0.28,0.04-0.432,0.04h-1.716v-1.771h1.836c0.683,0,1.022,0.289,1.022,0.865 C23.195,15.96,23.166,16.11,23.104,16.226z"/><path d="M9.036,2.622C8.867,2.89,8.651,3.104,8.389,3.263C8.124,3.422,7.828,3.535,7.501,3.604 c-0.327,0.069-0.664,0.097-1.01,0.088v1.965h2.224v5.471h2.838V1.632H9.315C9.297,2.024,9.204,2.354,9.036,2.622z"/></g></g>
+                </svg>
+            </div>
             <span class="text-sm font-medium ml-4">Счетчик слов и символов</span>
         </a>
         <a href="?app=qrScanner" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Сканер QR-кодов" data-module="qrScanner">
@@ -157,12 +161,24 @@
             <span class="text-sm font-medium ml-4">Сканер QR-кодов</span>
         </a>
         <a href="?app=piano" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Пианино" data-module="piano">
-            <div class="w-12 h-12 bg-red-600 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 5a1 1 0 011-1h14a1 1 0 011 1v8a1 1 0 01-1 1H3a1 1 0 01-1-1V5zm1 0v8h2V5H3zm4 0v8h2V5H7zm4 0v8h2V5h-2zm4 0v8h2V5h-2z"></path><path d="M4 5.5h.5v4H4v-4zm4 0h.5v4H8v-4zm4 0h.5v4h-2v-1H12v-3z"></path></svg></div>
+            <div class="w-12 h-12 bg-red-600 text-white rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M22 21C23.1046 21 24 20.1046 24 19V5C24 3.89543 23.1046 3 22 3H3C1.89543 3 1 3.89543 1 5V19C1 20.1046 1.89543 21 3 21H22ZM11 5H8.98486V13H7.98511V19H12V13H11V5ZM18.0151 19H22V5H19.0151V13H18.0151V19ZM17.0151 13H16.0151V5H14V13H13V19H17.0151V13ZM6.98511 19V13H5.98486V5H3L3 19H6.98511Z"/>
+                </svg>
+            </div>
             <span class="text-sm font-medium ml-4">Пианино</span>
         </a>
         <!-- НОВЫЕ КАРТОЧКИ ПРИЛОЖЕНИЙ -->
         <a href="?app=caseConverter" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Конвертер регистра" data-module="caseConverter">
-            <div class="w-12 h-12 bg-teal-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 4v16M11 4v16M16 4v16"></path><path d="M4 8h5M9 8h5M14 8h5"></path><text x="6" y="15" font-family="Arial, sans-serif" font-size="10" fill="currentColor" style="text-transform: uppercase;">Aa</text></svg></div>
+            <div class="w-12 h-12 bg-teal-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-8 h-8" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <g fill="currentColor">
+                            <path d="M13.5004086,16.493803 L15.9083428,9.27000046 L18.0895999,9.27000046 L21,17.9950289 L19.0319589,17.9950289 L18.463322,16.0682518 L15.4968123,16.0682518 L14.8540685,17.9950289 L14.0011712,17.9950289 L14.0028294,18 L11.2960768,18 L10.514,15.35 L6.434,15.35 L5.55,18 L3,18 L7,6 L10,6 L13.5004086,16.493803 Z M7,13 L10,13 L8.496,9 L7,13 Z M15.9083428,14.3596004 L18.0895999,14.3596004 L16.996063,11.4512576 L15.9083428,14.3596004 Z"></path>
+                        </g>
+                    </g>
+                </svg>
+            </div>
             <span class="text-sm font-medium ml-4">Конвертер регистра</span>
         </a>
         <a href="?app=imageConverter" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Конвертер форматов изображений" data-module="imageConverter">
