--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
             <div class="w-12 h-12 bg-teal-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 4v16M16 4v16M4 8h16M4 16h16"></path><circle cx="12" cy="12" r="2.5" stroke-width="2"></circle></svg></div>
             <span class="text-sm font-medium ml-4">Крестики-нолики</span>
         </a>
-        <!-- ИЗМЕНЕНО: Новая иконка для Сапера -->
         <a href="?app=minesweeper" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Сапер" data-module="minesweeper">
             <div class="w-12 h-12 bg-gray-600 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
                 <svg class="w-8 h-8" viewBox="0 0 128 128" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -173,7 +172,6 @@
             </div>
             <span class="text-sm font-medium ml-4">Пианино</span>
         </a>
-        <!-- НОВЫЕ КАРТОЧКИ ПРИЛОЖЕНИЙ -->
         <a href="?app=caseConverter" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Конвертер регистра" data-module="caseConverter">
             <div class="w-12 h-12 bg-teal-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
                 <svg class="w-8 h-8" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -197,6 +195,44 @@
         <a href="?app=memoryGame" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Игра на память" data-module="memoryGame">
             <div class="w-12 h-12 bg-pink-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5z"></path><circle cx="12" cy="12" r="3"></circle></svg></div>
             <span class="text-sm font-medium ml-4">Игра на память</span>
+        </a>
+        <!-- НОВЫЕ ПРИЛОЖЕНИЯ -->
+        <a href="?app=textTranslit" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Транслитерация текста" data-module="textTranslit">
+            <div class="w-12 h-12 bg-sky-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <text x="5" y="18" font-family="Arial, sans-serif" font-size="12" font-weight="bold">А</text>
+                    <path d="M10 11h4m0 0l-2-2m2 2l-2 2" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <text x="15" y="18" font-family="Arial, sans-serif" font-size="12" font-weight="bold">A</text>
+                </svg>
+            </div>
+            <span class="text-sm font-medium ml-4">Транслитерация текста</span>
+        </a>
+        <a href="?app=imageResizer" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Изменение размера изображений" data-module="imageResizer">
+            <div class="w-12 h-12 bg-rose-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M21 12.79A9 9 0 1 1 11.21 3H18v7M15 3l6 6M3 21l6-6"/>
+                </svg>
+            </div>
+            <span class="text-sm font-medium ml-4">Изменение размера изображений</span>
+        </a>
+        <a href="?app=currencyCalculator" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Калькулятор валют" data-module="currencyCalculator">
+            <div class="w-12 h-12 bg-emerald-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M12 1v22M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
+                </svg>
+            </div>
+            <span class="text-sm font-medium ml-4">Калькулятор валют</span>
+        </a>
+        <a href="?app=snakeGame" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Змейка" data-module="snakeGame">
+            <div class="w-12 h-12 bg-lime-600 text-white rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.55,10.73a1.88,1.88,0,0,1,0-2.66l2-2A1.88,1.88,0,0,1,17.2,8.73l-2,2a1.88,1.88,0,0,1-2.66,0Z"/>
+                    <path d="M9.89,13.39a1.88,1.88,0,0,1,0,2.66l-2,2A1.88,1.88,0,0,1,5.2,15.39l2-2a1.88,1.88,0,0,1,2.66,0Z"/>
+                    <path d="M8.73,5.2a1.88,1.88,0,0,1,2.66,0l2,2a1.88,1.88,0,0,1,0,2.66l-2,2a1.88,1.88,0,0,1-2.66,0l-2-2a1.88,1.88,0,0,1,0-2.66Z"/>
+                    <path d="M6.07,2.54A1.88,1.88,0,0,1,8.73,2.54l2,2a1.88,1.88,0,0,1,0,2.66L9.89,8.07a1.88,1.88,0,0,1-2.66,0l-2-2a1.88,1.88,0,0,1,0-2.66Z"/>
+                </svg>
+            </div>
+            <span class="text-sm font-medium ml-4">Змейка</span>
         </a>
     </template>
 
