--- a/index.html
+++ b/index.html
@@ -196,40 +196,57 @@
             <div class="w-12 h-12 bg-pink-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5z"></path><circle cx="12" cy="12" r="3"></circle></svg></div>
             <span class="text-sm font-medium ml-4">Игра на память</span>
         </a>
-        <!-- НОВЫЕ ПРИЛОЖЕНИЯ -->
+        <!-- ИЗМЕНЕНА ИКОНКА -->
         <a href="?app=textTranslit" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Транслитерация текста" data-module="textTranslit">
             <div class="w-12 h-12 bg-sky-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
-                <svg class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <text x="5" y="18" font-family="Arial, sans-serif" font-size="12" font-weight="bold">А</text>
-                    <path d="M10 11h4m0 0l-2-2m2 2l-2 2" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    <text x="15" y="18" font-family="Arial, sans-serif" font-size="12" font-weight="bold">A</text>
-                </svg>
+                <svg class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M8 15H3.5A2.502 2.502 0 0 1 1 12.5v-9A2.502 2.502 0 0 1 3.5 1h9A2.502 2.502 0 0 1 15 3.5V8h-1V3.5A1.502 1.502 0 0 0 12.5 2h-9A1.502 1.502 0 0 0 2 3.5v9A1.502 1.502 0 0 0 3.5 14H8zm-.038-4.811a9.77 9.77 0 0 1-3.766 1.796l-.242-.97a8.816 8.816 0 0 0 3.282-1.532A9.264 9.264 0 0 1 4.888 5H4V4h3.279l-.544-.544.707-.707L8.692 4H12v1h-.914A9.836 9.836 0 0 1 9.78 8.152a3.853 3.853 0 0 0-1.82 2.037zm.032-1.383A8.167 8.167 0 0 0 10.058 5H5.922a8.18 8.18 0 0 0 2.072 3.806zM23 20.447v-8.894A2.525 2.525 0 0 0 20.484 9h-8.931A2.556 2.556 0 0 0 9 11.553v8.894A2.556 2.556 0 0 0 11.553 23h8.894A2.556 2.556 0 0 0 23 20.447zM20.484 10A1.517 1.517 0 0 1 22 11.516v8.968A1.517 1.517 0 0 1 20.484 22h-8.968A1.517 1.517 0 0 1 10 20.484v-8.968A1.517 1.517 0 0 1 11.516 10zm-2.086 8h-4.796l-1.159 2.23-.886-.46L16 11.215l4.443 8.555-.886.46zm-.52-1L16 13.385 14.122 17zM6 22.01a2.003 2.003 0 0 1-2-2v-2.303l1.646 1.646.707-.707L3.506 15.8.659 18.646l.707.707L3 17.72v2.292a3.003 3.003 0 0 0 3 3h2.058v-1zM22.646 4.647L21 6.293V4a3.003 3.003 0 0 0-3-3h-2v1h2a2.003 2.003 0 0 1 2 2v2.281l-1.634-1.635-.707.707 2.847 2.848 2.848-2.848z"/></svg>
             </div>
             <span class="text-sm font-medium ml-4">Транслитерация текста</span>
         </a>
+        <!-- ИЗМЕНЕНА ИКОНКА -->
         <a href="?app=imageResizer" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Изменение размера изображений" data-module="imageResizer">
-            <div class="w-12 h-12 bg-rose-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
-                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M21 12.79A9 9 0 1 1 11.21 3H18v7M15 3l6 6M3 21l6-6"/>
+            <div class="w-12 h-12 bg-rose-500 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <svg class="w-full h-full" viewBox="0 0 100 100" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="M76.647,30.353c-1.104,0-2-0.896-2-2v-3h-3c-1.104,0-2-0.896-2-2s0.896-2,2-2h5c1.104,0,2,0.896,2,2v5C78.647,29.457,77.752,30.353,76.647,30.353z"/>
+                        <path d="M62.988,25.353h-8.659c-1.104,0-2-0.896-2-2s0.896-2,2-2h8.659c1.104,0,2,0.896,2,2S64.093,25.353,62.988,25.353z"/>
+                        <path d="M45.67,25.353h-8.659c-1.104,0-2-0.896-2-2s0.896-2,2-2h8.659c1.104,0,2,0.896,2,2S46.775,25.353,45.67,25.353z"/>
+                        <path d="M23.353,30.353c-1.104,0-2-0.896-2-2v-5c0-1.104,0.896-2,2-2h5c1.104,0,2,0.896,2,2s-0.896,2-2,2h-3v3C25.353,29.457,24.457,30.353,23.353,30.353z"/>
+                        <path d="M23.353,64.988c-1.104,0-2-0.896-2-2v-8.659c0-1.104,0.896-2,2-2s2,0.896,2,2v8.659C25.353,64.093,24.457,64.988,23.353,64.988z"/>
+                        <path d="M23.353,47.67c-1.104,0-2-0.896-2-2v-8.659c0-1.104,0.896-2,2-2s2,0.896,2,2v8.659C25.353,46.775,24.457,47.67,23.353,47.67z"/>
+                        <path d="M28.353,78.647h-5c-1.104,0-2-0.896-2-2v-5c0-1.104,0.896-2,2-2s2,0.896,2,2v3h3c1.104,0,2,0.896,2,2S29.457,78.647,28.353,78.647z"/>
+                        <path d="M62.988,78.647h-8.659c-1.104,0-2-0.896-2-2s0.896-2,2-2h8.659c1.104,0,2,0.896,2,2S64.093,78.647,62.988,78.647z"/>
+                        <path d="M45.67,78.647h-8.659c-1.104,0-2-0.896-2-2s0.896-2,2-2h8.659c1.104,0,2,0.896,2,2S46.775,78.647,45.67,78.647z"/>
+                        <path d="M76.647,78.647h-5c-1.104,0-2-0.896-2-2s0.896-2,2-2h3v-3c0-1.104,0.896-2,2-2s2,0.896,2,2v5C78.647,77.752,77.752,78.647,76.647,78.647z"/>
+                        <path d="M76.647,64.988c-1.104,0-2-0.896-2-2v-8.659c0-1.104,0.896-2,2-2s2,0.896,2,2v8.659C78.647,64.093,77.752,64.988,76.647,64.988z"/>
+                        <path d="M76.647,47.67c-1.104,0-2-0.896-2-2v-8.659c0-1.104,0.896-2,2-2s2,0.896,2,2v8.659C78.647,46.775,77.752,47.67,76.647,47.67z"/>
+                        <path d="M90.216,92.216H9.784c-1.104,0-2-0.896-2-2V9.784c0-1.104,0.896-2,2-2h80.432c1.104,0,2,0.896,2,2v80.432C92.216,91.32,91.32,92.216,90.216,92.216z M11.784,88.216h76.432V11.784H11.784V88.216z"/>
+                    </g>
                 </svg>
             </div>
             <span class="text-sm font-medium ml-4">Изменение размера изображений</span>
         </a>
+        <!-- ИЗМЕНЕНА ИКОНКА -->
         <a href="?app=currencyCalculator" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Калькулятор валют" data-module="currencyCalculator">
-            <div class="w-12 h-12 bg-emerald-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
-                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M12 1v22M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
+            <div class="w-12 h-12 bg-emerald-500 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <svg class="w-full h-full" viewBox="0 0 48 48" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="M44,7.1V14a2,2,0,0,1-2,2H35a2,2,0,0,1-2-2.3A2.1,2.1,0,0,1,35.1,12h2.3A18,18,0,0,0,6.1,22.2a2,2,0,0,1-2,1.8h0a2,2,0,0,1-2-2.2A22,22,0,0,1,40,8.9V7a2,2,0,0,1,2.3-2A2.1,2.1,0,0,1,44,7.1Z"/>
+                        <path d="M4,40.9V34a2,2,0,0,1,2-2h7a2,2,0,0,1,2,2.3A2.1,2.1,0,0,1,12.9,36H10.6A18,18,0,0,0,41.9,25.8a2,2,0,0,1,2-1.8h0a2,2,0,0,1,2,2.2A22,22,0,0,1,8,39.1V41a2,2,0,0,1-2.3,2A2.1,2.1,0,0,1,4,40.9Z"/>
+                        <path d="M24.7,22c-3.5-.7-3.5-1.3-3.5-1.8s.2-.6.5-.9a3.4,3.4,0,0,1,1.8-.4,6.3,6.3,0,0,1,3.3.9,1.8,1.8,0,0,0,2.7-.5,1.9,1.9,0,0,0-.4-2.8A9.1,9.1,0,0,0,26,15.3V13a2,2,0,0,0-4,0v2.2c-3,.5-5,2.5-5,5.2s3.3,4.9,6.5,5.5,3.3,1.3,3.3,1.8-1.1,1.4-2.5,1.4h0a6.7,6.7,0,0,1-4.1-1.3,2,2,0,0,0-2.8.6,1.8,1.8,0,0,0,.3,2.6A10.9,10.9,0,0,0,22,32.8V35a2,2,0,0,0,4,0V32.8a6.3,6.3,0,0,0,3-1.3,4.9,4.9,0,0,0,2-4h0C31,23.8,27.6,22.6,24.7,22Z"/>
+                    </g>
                 </svg>
             </div>
             <span class="text-sm font-medium ml-4">Калькулятор валют</span>
         </a>
+        <!-- ИЗМЕНЕНА ИКОНКА -->
         <a href="?app=snakeGame" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Змейка" data-module="snakeGame">
-            <div class="w-12 h-12 bg-lime-600 text-white rounded-xl flex items-center justify-center flex-shrink-0">
-                <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12.55,10.73a1.88,1.88,0,0,1,0-2.66l2-2A1.88,1.88,0,0,1,17.2,8.73l-2,2a1.88,1.88,0,0,1-2.66,0Z"/>
-                    <path d="M9.89,13.39a1.88,1.88,0,0,1,0,2.66l-2,2A1.88,1.88,0,0,1,5.2,15.39l2-2a1.88,1.88,0,0,1,2.66,0Z"/>
-                    <path d="M8.73,5.2a1.88,1.88,0,0,1,2.66,0l2,2a1.88,1.88,0,0,1,0,2.66l-2,2a1.88,1.88,0,0,1-2.66,0l-2-2a1.88,1.88,0,0,1,0-2.66Z"/>
-                    <path d="M6.07,2.54A1.88,1.88,0,0,1,8.73,2.54l2,2a1.88,1.88,0,0,1,0,2.66L9.89,8.07a1.88,1.88,0,0,1-2.66,0l-2-2a1.88,1.88,0,0,1,0-2.66Z"/>
+            <div class="w-12 h-12 bg-lime-600 text-white rounded-xl flex items-center justify-center p-1.5 flex-shrink-0">
+                <svg class="w-full h-full" viewBox="0 0 512 512" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="M395.25,443.374c-2.552-2.5-4.37-5.249-5.636-8.24c-1.886-4.469-2.424-9.521-1.552-14.315 c0.886-4.795,3.029-9.21,6.748-13.035l47.694-48.899c8.953-9.164,15.724-19.852,20.148-31.19c6.65-17.011,8.12-35.424,4.484-53.041 c-3.613-17.595-12.482-34.523-26.267-47.944c-9.164-8.953-19.86-15.724-31.19-20.147c-17.011-6.65-35.424-8.12-53.034-4.491 c-17.602,3.62-34.53,12.489-47.959,26.274l-77.816,79.77c-2.499,2.552-5.256,4.378-8.248,5.636c-4.46,1.886-9.52,2.424-14.307,1.56 c-4.802-0.894-9.21-3.037-13.034-6.755c-2.552-2.492-4.37-5.242-5.635-8.241c-1.886-4.469-2.424-9.513-1.553-14.3 c0.886-4.802,3.029-9.218,6.74-13.042l20.087-20.586c8.952-9.165,15.723-19.86,20.146-31.19c6.651-17.012,8.12-35.424,4.484-53.034 c-3.469-16.906-11.831-33.137-24.677-46.293l-10.679-35.462c-6.044-20.117-22.17-35.614-42.506-40.87l-40.34-10.437 c-7.513-1.939-15.496,0.288-20.919,5.832L85.613,56.125c-5.423,5.552-7.446,13.588-5.316,21.048l11.429,40.074 c5.764,20.208,21.654,35.932,41.923,41.491l33.174,9.089c0,0,3.136,6.514,4.393,9.506c1.886,4.477,2.424,9.52,1.56,14.307 c-0.894,4.803-3.037,9.218-6.756,13.043L145.94,225.27c-8.945,9.172-15.716,19.859-20.146,31.19 c-6.643,17.011-8.112,35.424-4.477,53.041c3.606,17.595,12.482,34.531,26.26,47.952c9.164,8.953,19.859,15.724,31.19,20.148 c17.012,6.65,35.424,8.112,53.042,4.484c17.602-3.62,34.523-12.482,47.951-26.267l77.824-79.778c2.5-2.545,5.249-4.37,8.24-5.628 c4.469-1.886,9.521-2.432,14.3-1.56c4.802,0.894,9.225,3.037,13.042,6.748c2.56,2.5,4.378,5.249,5.635,8.24 c1.893,4.469,2.431,9.521,1.56,14.308c-0.886,4.802-3.037,9.21-6.748,13.042l-47.702,48.891 c-8.953,9.164-15.716,19.867-20.147,31.198c-6.643,17.004-8.112,35.416-4.476,53.034c3.606,17.602,12.482,34.522,26.26,47.952 c41.18,40.165,117.088,11.262,123.087-18.05C449.041,475.753,415.238,466.641,395.25,443.374z"/>
+                        <path d="M92.786,42.461c0,0-32.19-30.403-31.713-42.461c-7.165,7.166,0.576,20.284,0.576,20.284 s-13.118-7.741-20.284-0.576c12.066-0.478,42.468,31.706,42.468,31.706L92.786,42.461z"/>
+                    </g>
                 </svg>
             </div>
             <span class="text-sm font-medium ml-4">Змейка</span>
