--- a/index.html
+++ b/index.html
@@ -196,14 +196,12 @@
             <div class="w-12 h-12 bg-pink-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5z"></path><circle cx="12" cy="12" r="3"></circle></svg></div>
             <span class="text-sm font-medium ml-4">Игра на память</span>
         </a>
-        <!-- ИЗМЕНЕНА ИКОНКА -->
         <a href="?app=textTranslit" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Транслитерация текста" data-module="textTranslit">
             <div class="w-12 h-12 bg-sky-500 text-white rounded-xl flex items-center justify-center flex-shrink-0">
                 <svg class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M8 15H3.5A2.502 2.502 0 0 1 1 12.5v-9A2.502 2.502 0 0 1 3.5 1h9A2.502 2.502 0 0 1 15 3.5V8h-1V3.5A1.502 1.502 0 0 0 12.5 2h-9A1.502 1.502 0 0 0 2 3.5v9A1.502 1.502 0 0 0 3.5 14H8zm-.038-4.811a9.77 9.77 0 0 1-3.766 1.796l-.242-.97a8.816 8.816 0 0 0 3.282-1.532A9.264 9.264 0 0 1 4.888 5H4V4h3.279l-.544-.544.707-.707L8.692 4H12v1h-.914A9.836 9.836 0 0 1 9.78 8.152a3.853 3.853 0 0 0-1.82 2.037zm.032-1.383A8.167 8.167 0 0 0 10.058 5H5.922a8.18 8.18 0 0 0 2.072 3.806zM23 20.447v-8.894A2.525 2.525 0 0 0 20.484 9h-8.931A2.556 2.556 0 0 0 9 11.553v8.894A2.556 2.556 0 0 0 11.553 23h8.894A2.556 2.556 0 0 0 23 20.447zM20.484 10A1.517 1.517 0 0 1 22 11.516v8.968A1.517 1.517 0 0 1 20.484 22h-8.968A1.517 1.517 0 0 1 10 20.484v-8.968A1.517 1.517 0 0 1 11.516 10zm-2.086 8h-4.796l-1.159 2.23-.886-.46L16 11.215l4.443 8.555-.886.46zm-.52-1L16 13.385 14.122 17zM6 22.01a2.003 2.003 0 0 1-2-2v-2.303l1.646 1.646.707-.707L3.506 15.8.659 18.646l.707.707L3 17.72v2.292a3.003 3.003 0 0 0 3 3h2.058v-1zM22.646 4.647L21 6.293V4a3.003 3.003 0 0 0-3-3h-2v1h2a2.003 2.003 0 0 1 2 2v2.281l-1.634-1.635-.707.707 2.847 2.848 2.848-2.848z"/></svg>
             </div>
             <span class="text-sm font-medium ml-4">Транслитерация текста</span>
         </a>
-        <!-- ИЗМЕНЕНА ИКОНКА -->
         <a href="?app=imageResizer" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Изменение размера изображений" data-module="imageResizer">
             <div class="w-12 h-12 bg-rose-500 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
                 <svg class="w-full h-full" viewBox="0 0 100 100" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -226,7 +224,7 @@
             </div>
             <span class="text-sm font-medium ml-4">Изменение размера изображений</span>
         </a>
-        <!-- ИЗМЕНЕНА ИКОНКА -->
+        <!-- ИСПРАВЛЕНА ИКОНКА ЗДЕСЬ -->
         <a href="?app=currencyCalculator" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Калькулятор валют" data-module="currencyCalculator">
             <div class="w-12 h-12 bg-emerald-500 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
                 <svg class="w-full h-full" viewBox="0 0 48 48" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -239,7 +237,6 @@
             </div>
             <span class="text-sm font-medium ml-4">Калькулятор валют</span>
         </a>
-        <!-- ИЗМЕНЕНА ИКОНКА -->
         <a href="?app=snakeGame" class="app-item flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Змейка" data-module="snakeGame">
             <div class="w-12 h-12 bg-lime-600 text-white rounded-xl flex items-center justify-center p-1.5 flex-shrink-0">
                 <svg class="w-full h-full" viewBox="0 0 512 512" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
