--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <!-- Библиотека Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
+    <!-- ИЗМЕНЕНИЕ: Добавляем Firebase SDK (совместимые версии v8) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
     <!-- Наши собственные стили -->
     <link rel="stylesheet" href="css/style.css">
     <script>
@@ -25,7 +30,7 @@
 </head>
 <body class="bg-gray-100 text-gray-900 dark:bg-gray-800 dark:text-gray-200 font-sans p-4">
 
-    <!-- Контейнер в правом верхнем углу -->
+    <!-- Контейнер в правом верхнем углу (без изменений) -->
     <div class="fixed top-4 right-4 flex items-center gap-4 z-50">
         <div id="google-signin-top-right-container"></div>
         <div id="user-profile" class="hidden flex items-center gap-3 bg-white dark:bg-gray-700 p-2 rounded-full shadow-md">
@@ -41,7 +46,7 @@
         </button>
     </div>
 
-    <!-- Основной контейнер -->
+    <!-- Основной контейнер (без изменений) -->
     <div class="flex flex-col items-center min-h-screen pt-8 pb-8">
         <div class="w-full max-w-4xl mx-auto p-6 bg-white dark:bg-gray-900 rounded-2xl shadow-lg transition-colors">
             <h1 class="text-4xl font-bold text-center mb-6"><a href="/" id="home-link">Mini Apps</a></h1>
@@ -59,7 +64,6 @@
         </div>
         <div id="changelog-container" class="w-full max-w-4xl mx-auto p-6 mt-8 bg-white dark:bg-gray-900 rounded-2xl shadow-lg transition-colors"></div>
     </div>
-
     <!-- 
       НЕВИДИМЫЙ ШАБЛОН СО ВСЕМИ КАРТОЧКАМИ ПРИЛОЖЕНИЙ
       JavaScript будет копировать элементы из этого шаблона.
