--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <!-- Tailwind CSS -->
     <script src="js/tailwind.js"></script>
 
+    <!-- ИЗМЕНЕНИЕ: Добавляем подсказки для браузера -->
+    <link rel="preconnect" href="https://accounts.google.com">
+    <link rel="preconnect" href="https://www.gstatic.com">
+    <link rel="preconnect" href="https://mini-apps-2c0ad.firebaseapp.com">
+
+    <!-- ИЗМЕНЕНИЕ: Добавляем Firebase SDK (совместимые версии v8) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
     <!-- Внешние библиотеки -->
     <script src="js/lame.min.js"></script>
     <script src="js/jsQR.min.js"></script>
@@ -16,11 +26,6 @@
 
     <!-- Библиотека Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-
-    <!-- ИЗМЕНЕНИЕ: Добавляем Firebase SDK (совместимые версии v8) -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
     <!-- Наши собственные стили -->
     <link rel="stylesheet" href="css/style.css">
