--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                 <svg class="absolute left-4 top-1/2 -translate-y-1/2 h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                 <div id="suggestions-container" class="absolute w-full mt-2 rounded-xl bg-white dark:bg-gray-700 border border-gray-200 dark:border-gray-600 shadow-lg hidden z-10"></div>
             </div>
-            <div id="filter-container" class="flex flex-wrap justify-center items-center gap-2 sm:gap-4 mb-6">
+<!-- Фильтры -->
+            <div id="filter-container" class="flex flex-wrap justify-center items-center gap-2 sm:gap-4 mb-6 hidden">
                 <button data-sort="default" class="filter-btn active">Все</button>
                 <button data-sort="popular" class="filter-btn">Популярные</button>
                 <button data-sort="new" class="filter-btn">Новые</button>
