--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </a>
         <a href="?app=magicBall" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Шар предсказаний" data-module="magicBall">
             <button class="pin-btn" aria-label="Закрепить/открепить приложение"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polygon class="pin-icon-poly" points="2.77 20.53 8.78 13.81 10.19 15.22 3.47 21.23 2.77 20.53 2.77 20.53"/><path class="pin-icon-path" d="M13.73,18.76,5.24,10.27A5.94,5.94,0,0,1,9.48,8.52,5.42,5.42,0,0,1,11,8.73L14.5,5.26a1.49,1.49,0,0,1,2-2,1.32,1.32,0,0,1,.42.29l3.53,3.53a1.32,1.32,0,0,1,.29.42,1.49,1.49,0,0,1-2,2L15.27,13a5.42,5.42,0,0,1,.21,1.55A5.94,5.94,0,0,1,13.73,18.76Z"/></svg></button>
-            <div class="w-12 h-12 bg-gray-800 text-white dark:bg-gray-200 dark:text-black rounded-xl flex items-center justify-center flex-shrink-0"><img src="img/magicBall.svg" class="w-8 h-8" alt="Шар предсказаний"></div>
+            <div class="w-12 h-12 bg-gray-700 text-white rounded-xl flex items-center justify-center flex-shrink-0"><img src="img/magicBall.svg" class="w-8 h-8" alt="Шар предсказаний"></div>
             <span class="text-sm font-medium ml-4 pr-8">Шар предсказаний</span>
         </a>
         <a href="?app=ticTacToe" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Крестики-нолики" data-module="ticTacToe">
