--- a/index.html
+++ b/index.html
@@ -355,6 +355,16 @@
             </div>
             <span class="text-sm font-medium ml-4 pr-8">Змейка</span>
         </a>
+            <a href="?app=timezoneConverter" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Конвертер часовых поясов" data-module="timezoneConverter">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение">
+                <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
+                <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
+            </button>
+            <div class="w-12 h-12 bg-sky-600 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <img src="img/timezoneConverter.svg" class="w-full h-full filter brightness-0 invert" alt="Конвертер часовых поясов">
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">Конвертер часовых поясов</span>
+        </a>
     </template>
 </body>
 </html>
