--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             </div>
             <span class="text-sm font-medium ml-4 pr-8">Змейка</span>
         </a>
-            <a href="?app=timezoneConverter" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Конвертер часовых поясов" data-module="timezoneConverter">
+        <a href="?app=timezoneConverter" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Конвертер часовых поясов" data-module="timezoneConverter">
             <button class="pin-btn" aria-label="Закрепить/открепить приложение">
                 <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
                 <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
@@ -365,6 +365,38 @@
             </div>
             <span class="text-sm font-medium ml-4 pr-8">Конвертер часовых поясов</span>
         </a>
+        <!-- НОВЫЕ ПРИЛОЖЕНИЯ -->
+        <a href="?app=textToSpeech" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Текст в речь" data-module="textToSpeech">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение">
+                <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
+                <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
+            </button>
+            <div class="w-12 h-12 bg-cyan-600 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <img src="img/textToSpeech.svg" class="w-full h-full filter brightness-0 invert" alt="Текст в речь">
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">Текст в речь</span>
+        </a>
+        <a href="?app=rockPaperScissors" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Камень, ножницы, бумага" data-module="rockPaperScissors">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение">
+                <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
+                <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
+            </button>
+            <div class="w-12 h-12 bg-rose-600 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <img src="img/rockPaperScissors.svg" class="w-full h-full filter brightness-0 invert" alt="Камень, ножницы, бумага">
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">Камень, ножницы, бумага</span>
+        </a>
+        <a href="?app=sudoku" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Судоку" data-module="sudoku">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение">
+                <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
+                <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
+            </button>
+            <div class="w-12 h-12 bg-indigo-600 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <img src="img/sudoku.svg" class="w-full h-full filter brightness-0 invert" alt="Судоку">
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">Судоку</span>
+        </a>
     </template>
 </body>
 </html>
+--- END OF FILE index.html ---
