--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="js/qrcode.min.js"></script>
     <script src="js/jszip.min.js"></script>
+    <script src="js/JsBarcode.all.min.js"></script>
 
     <!-- Библиотека Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
