--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         }
         .dark body {
             background-color: #1e3a8a; /* Резервный цвет для темной темы */
-            background-image: linear-gradient(135deg, #1e3a8a 0%, #4c1d95 100%);
+            background-image: linear-gradient(135deg, #111111 0%, #333333 100%);
         }
     </style>
     
